--- a/index.tex
+++ b/index.tex
@@ -21,6 +21,8 @@
 % to insert code 
 \usepackage{listings}
 
+% for indicator brackets
+\usepackage{stmaryrd}
 
 
 \NewTotalDocumentCounter{totalfigures}
