--- a/index.tex
+++ b/index.tex
@@ -24,6 +24,9 @@
 % for indicator brackets
 \usepackage{stmaryrd}
 
+% for indicator symbol
+\usepackage{bbold}
+
 
 \NewTotalDocumentCounter{totalfigures}
 \NewTotalDocumentCounter{totalbibitems}
