add mobilenetv1 description

--- a/5_main/40_cnn_applying.tex
+++ b/5_main/40_cnn_applying.tex
@@ -1,4 +1,4 @@
-\subsection{Застосування нейронних мереж для отрмання маски людини}
+\section{Застосування нейронних мереж для отрмання маски людини}
 
 Введемо поняття \textbf{маски людини (викладача)}.
 
@@ -7,36 +7,26 @@
 пікселям, в яких на відповідному кадрі \(F^{i}\) була помічена людина,
 відповідає одиниця, а іншим відповідає нуль.
 
-\subsection{Згорткові нейронні мережі (CNN)}
 
 Для локалізації людини були використані так звані \textbf{згорткові нейронні мережі} 
 (англ. \textit{convolutional neural networks, CNN}).
 Це частина машинного навчання, яке називається глибоким навчанням, оскільки використовується 
 більше двох нейронних шарів разом зі згортковими.
 
-В таких меражах застосовується операція згортки(\textbf{Conv}) \textsf{}
-та пулінгу (\textbf{Pooling}).
+В таких меражах застосовується операція згортки(англ. \textit{convolution})
+та пулінгу (англ. \textit{pooling}), батч-нормалізація, та різні функції 
+активації такі як ReLU, Tanh.
+
+Надалі послідовну комбінацію (згортка + батч-нормалізації + функція активації)
+будемо називати згортковим шаром чи блоком, але кожний автор нейронної мережі
+створює свої блоки відмінні від вищезазначеного. 
 
 \begin{figure}[H]
     \centering
-    \begin{subfigure}[c]{0.5\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{images/cnn_convolution_operation}
-        \caption{Операція згортки
-        \label{fig:cnn:operation}
-        }
-    \end{subfigure}
-\end{figure}
-\begin{figure}
-    \centering
-    \ContinuedFloat
-    \begin{subfigure}[c]{0.5\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{images/cnn_convolution_layer}
-        \caption{Шар згортки
-        \label{fig:cnn:layer}
-        }
-    \end{subfigure}
+    \includegraphics[width=0.4\textwidth]{images/cnn_conv_operation}
+    \caption{Ілюстрація взяття звичайної згортки  \cite{deep_wise_sep_conv_website}
+    \label{fig:cnn:deep_wise_conv}
+    }
 \end{figure}
 
 Розглянемо архітектури нейронних мереж, що застосовувались у роботі
@@ -45,7 +35,7 @@
 За мету було поставлено підібрати таку мережу, що здатна швидко оброблювати 
 один знімок навіть на смартфоні. Тому головним критерієм є швидкість.
 
-\textbf{YOLO}
+\subsection{YOLO}
 
 YOLO (You-Only-Look-Once) - це сімейство нейронних мереж.
 
@@ -125,14 +115,94 @@ $\mathbb{1}_{ij}^{obj}$ чи в комірці $i$ в $j$-ій області з
 \begin{figure}[H]
     \includegraphics[width=0.5\linewidth]{images/cnn_yolo3}
     \centering
-    \caption{Графік залежності точності  по датасеті COCO від швидкості обробки однієї 
+    \caption{Графік залежності точності на датасеті COCO від швидкості обробки однієї 
     картинки різними мережами YOLOv5 н
     }
 \end{figure}
 
-\textbf{MobileNet}
+\subsection{MobileNet}
 
 MobileNet це також ще одне сімейство, що часто використовується у комп'ютерному зорі.
-Вперше була представлена у 2017 році наковцями з Google.
-З назви можна зрозуміти, що мета даної мережі як і вищеописаної це достатня продуктивність
-на слабких обчислювальних системах.
+Вперше була представлена у 2017 році наковцями з Google \ref{mobilenetv1}.
+Мережі даної категорії теж зробили свою революцію у обчисленні глибоких шарів з 
+використанням мінімальних обчислювальних ресурсів. Були запропоновані два гіпер-параметри,
+змінюючи які, можна отримати прирости в швидкості та точності. Мережі MobileNet 
+застосовуються для детектингу, класифікації об'єктів і також для широкомасштабної
+геолокалізації.
+
+Розглянемо особливості кожної версії MobileNet.
+
+\textbf{Mobilenetv1}
+
+Одним з головних задач для побудови першої мережі доного сімейства була заміна
+звичайного згорткового шару на новий глибинно просторовий згортковий шар 
+(англ. \textit{Depth-wise Separable Convolution}).
+
+Нехай маємо:
+ - квадратне зображення $I$ розмірами $S_I \times S_I \times M$ : широта, висота та 
+кількість каналів відповідно. 
+ - ядро $C$ розмірами $S_C \times S_C \times M \times N$, де $N$ вихідна розмірність 
+ отриманої згортки.
+ - вихідна згортка $C$ розмірами $S_K \times S_K \times N$
+
+ Тоді формулу звичайної згортки (Рис. \ref{fig:cnn:simple_conv}) можна записати як:
+
+\begin{equation}
+    G_{k,l,n} = \sum_{i,j,m} C_{i,j,m,n} · F_{k+i-1, l+j-1,m}
+    \label{eq:simple_conv}
+\end{equation}
+
+Щоб обчислити дану згортку потрібно $S_C · S_C · M · N · S_I · S_I$ операцій, що
+є накладує обчислювальні обмеження на мобільний присрій, якщо наприклад матимемо
+декілька таких згорток.
+Для вирішення даної проблеми застосовується глибинна згортка (Рис. ). Вона полягає
+у отриманні окремої згортки кожного каналу ядра до кожного каналу 
+зображення.
+Нехай $\widehat{C}$ ядро глибинної згортки, тоді маємо:
+
+\begin{equation}
+    \widehat{G}_{k,l,n} = \sum_{i,j,m} \widehat{C}_{i,j,m,n} · F_{k+i-1, l+j-1,m}
+    \label{eq:deep_wise_conv}
+\end{equation}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.4\textwidth]{images/cnn_deep_wise_conv}
+    \caption{Ілюстрація взяття глибинної згортки  \cite{deep_wise_sep_conv_website}
+    \label{fig:cnn:deep_wise_conv}
+    }
+\end{figure}
+
+Для обчислення вже цієї згортки треба  $S_C · S_C · M · S_I · S_I$.
+
+Як ми бачимо ми вже позбулись $N$ операцій, але маємо пам'ятати, що
+зараз $\widehat{G}$ складається з $M$ окремих вихідних згорток, тому
+, щоб створити єдиний вихід додатково до глибинної застосовують ще 
+й точкову згортку (англ. \textit{Pointwise Convolution}), в якій розмір
+ядра $1 \times 1$. Тоді маємо 
+$S_C · S_C · M · S_I · S_I + M · N · S_I · S_I$ оперцій. 
+Дана комбінація має назву глибинно просторова згортка, для 
+обчислення якої потрібно в $1/N + 1/S_C^2$ менше оперцій ніж
+для звичайної.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.4\textwidth]{images/cnn_deep_wise_separable_conv}
+    \caption{Ілюстрація взяття глибинно просторової згортки  \cite{deep_wise_sep_conv_website}
+    \label{fig:cnn:deep_wise_sep_conv}
+    }
+\end{figure}
+
+
+Таке нововведення до глибинного навчання дало змогу в рази пришвидшити 
+начання та швидкість нейронної мережі MobileNetv1. Вона використовує 
+просторово глибинні згортки розміром ядра $3 \times 3$. 
+Таким чином маємо таку заміну блоку.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.4\textwidth]{images/cnn_mobilenetv1_conv_layer}
+    \caption{Ліворуч звичайний згортковий шар, праворуч згортковий шар у MobileNetv1
+    \label{fig:cnn:mobilenetv1_conv_layer}
+    }
+\end{figure}
