add mobilenetv2 description

--- a/5_main/40_cnn_applying.tex
+++ b/5_main/40_cnn_applying.tex
@@ -18,8 +18,8 @@
 активації такі як ReLU, Tanh.
 
 Надалі послідовну комбінацію (згортка + батч-нормалізації + функція активації)
-будемо називати згортковим шаром чи блоком, але кожний автор нейронної мережі
-створює свої блоки відмінні від вищезазначеного. 
+будемо називати згортковим шаром, але кожний автор нейронної мережі
+створює свої шари відмінні від вищезазначеного. 
 
 \begin{figure}[H]
     \centering
@@ -180,7 +180,7 @@ MobileNet це також ще одне сімейство, що часто ви
 , щоб створити єдиний вихід додатково до глибинної застосовують ще 
 й точкову згортку (англ. \textit{Pointwise Convolution}), в якій розмір
 ядра $1 \times 1$. Тоді маємо 
-$S_C · S_C · M · S_I · S_I + M · N · S_I · S_I$ оперцій. 
+$S_C · S_C · M · S_I · S_I + M · N · S_I · S_I$ операцій. 
 Дана комбінація має назву глибинно просторова згортка, для 
 обчислення якої потрібно в $1/N + 1/S_C^2$ менше оперцій ніж
 для звичайної.
@@ -206,3 +206,70 @@ $S_C · S_C · M · S_I · S_I + M · N · S_I · S_I$ оперцій.
     \label{fig:cnn:mobilenetv1_conv_layer}
     }
 \end{figure}
+
+Також варто відмітити ще одну особливість MobileNetv1, а саме два гіперпараметри
+ширини та розмірності.
+Множник ширини $\alpha$ застосовується, щоб зменшити кожен шар мережі, що 
+в свою чергу дає приріст у швидкості.
+З множником  $\alpha \in (0,1]$ потрібно буде зробити
+$S_C · S_C · \alpha M · S_I · S_I + \alpha M · \alpha N · S_I · S_I$ операцій.
+Множник розмірності $\rho$ зменшує вхідну картинку і відповідно 
+розмірність згорток. Разом з $\alpha$  та $\rho \in (0,1]$ необхідно буде
+$S_C · S_C · \alpha M · \rho S_I · \rho S_I + \alpha M ·\alpha  N · \rho S_I · \rho S_I$
+оперцій.
+
+Повна архітектура мережі MobileNetv1 виглядає так:
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.4\textwidth]{images/cnn_mobilenetv1_architecture}
+    \caption{архітектура нейронної мережі MobileNetv1
+    \label{fig:cnn:mobilenetv1_architecture}
+    }
+\end{figure}
+
+
+\textbf{Mobilenetv2}
+
+Вже у 2018 році з'являється 2-га версія мережі MobileNet. Тут автори додали нові зміни в
+архітектуру такі як інвертовані залишки (англ. \textit{Inverted Residuals}) та 
+лінійні вузькі містя (англ.\textit{Linear Bottlenecks}). Також представили застосування 
+особливостей MobileNetv2 у фреймворку для детектингу SSDLite, що теж був використаний
+в даній роботі.
+
+Автори зробили дослідження щодо застосування функції ReLU (rectified linear unit) в 
+контексті низьких розмірностей. Вводиться поняття \textit{manifold of interest} 
+різноманітність ітересів - це множина шарів активацій. Була висунута гіпотеза про те що,
+різноманітність інтересів з високою розмірністю можна стиснути у підпростір меншої розмірності при
+чому зі збереженням інформації.
+
+Розпишемо детальніше з яких кроків складається новий структурний шар:
+
+
+\begin{enumerate}
+    \item   1. Нехай на вході зображення розмірами $S_I · S_I · M$, його приймає перший розширяючий блок.
+            Головна особливість цього блоку є новий параметр $t$, що називається розширяючим фактором.
+            Найкращими значеннями для нього є $[5,10]$. Менші значення краще застосовувати для меншої мережі,
+            а більші відповідно для більших. Саме тут можна побачити різноманітність інтересів.
+            Вихід $S_I · S_I · (t·M)$.
+    \item   Наступним кроком є вже відома глибинна згортка з функцією активації $ReLU6(x) =  min(max(0,x),6)$.
+            Вхід $S_I · S_I · (t·M)$, а вихід $(S_I/stride) · (S_I/stride) · (t·M)$, де  $stride$ - шаг згортки.
+    \item   Далі застосовується точкова згортка, щоб створити єдиний тензор. Як можна побачити на 
+            Рис. \ref{fig:cnn:mobilenetv2_layer} також застосовуються переваги residual block, де вхід в шар 
+            конкатинується з передостаннім блоком.
+\end{enumerate}
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\textwidth]{images/cnn_mobilenetv2_layer}  \cite{mobilenetv2}
+    \caption{Відмінність MobileNetv2 від MobileNetv1: ліворуч структурний шар MobileNetv2,
+            праворуч - MobileNetv1.
+    \label{fig:cnn:mobilenetv2_layer}
+    }
+\end{figure}
+
+Також варто відмітити, що автори вдосконалили мережу SSD (Single Shot Detector), він подібний 
+до YOLO і застосовується для локалізації об'єктів. Автори замінили звичайні згорткові шари 
+на розширяючі згорткові, які використовуються в MobileNetv2. Таким чином створивши досконалішу 
+версію SSDLite.
