add mobilenetv3 description

--- a/index.tex
+++ b/index.tex
@@ -55,10 +55,10 @@
 
 \clearpage
 
-\import{3_preface/}{symbols.tex}
-\import{3_preface/}{preface.tex}
+\import{3_preface/}{main.tex}
 \import{4_overview/}{main.tex}
-\import{5_main/}{main.tex}
+\import{5_mask/}{main.tex}
+\import{6_panorama/}{main.tex}
 
 
 \end{document}
