add ssd description

--- a/5_mask/1_preface.tex
+++ b/5_mask/1_preface.tex
@@ -1,4 +1,4 @@
 Другий розділ присвячено опису методів отримання маски людини, 
-щоб в подальшому прибрати викладача з кадру. Запропонвано використання
+щоб в подальшому прибрати викладача з кадру. Запропоновано використання
 алгоритму Бойкова-Колмогорова, згорткових мереж та їх комбінацій
 YOLO, MobileNet, SSDLite, Faster R-CNN.
