add faster_r-cnn description

--- a/5_mask/4_cnn_applying.tex
+++ b/5_mask/4_cnn_applying.tex
@@ -422,4 +422,68 @@ architecture structure), яка створена для  підбирання г
 \end{figure}
 
 
+\subsubsection{Faster R-CNN}
+
+Говорячи про детекцію і класифікацію об'єктів не можна не згадати про також відомий
+клас згорткових нейронних мереж як R-CNN (region-based convolutional neural network).
+
+Перша мережа R-CNN складалась з 3 незалежних один від одного етапів.
+На першому генерується 2000 пропозицій областей за допомогою
+вибіркового пошуку. Далі ці області проходять стиснення розміру до якогось
+фіксованого. Останній етап це метод опорних векторів вже з натренованими 
+вагами, який і робить класифікацію.
+
+R-CNN не була досить потужною, оскільки використовувала вибірковий пошук, 
+який займає чимало часу. Також варто відмітити, що потрібно зберігати чимало
+кешованих даних для натренованої мережі, щоб натренувати CNN.
+
+Багато проблем було вирішено вже з новою Fast R-CNN. В ній відсутні етапи як такі,
+а вся архітектура складається з одного модуля, що в рази полегшує
+навчання мережі. Тут також вводиться новий шар ROI Pooling, головна ціль якого 
+надати вектори ознак фіксованої довжини. Даний шар розбиває кожний запропонований 
+регіон на решітку, в кожній клітинці якій потім знаходиться максимальне значення
+(операція max pooling). Але навіть якщо і  Fast R-CNN швидша за R-CNN в ній досі 
+лишився вибірковий алгоритм.
+
+У Faster R-CNN \cite{faster_rcnn}, який саме теж тестувався для локалізації людини в
+цій роботі, запропоновано використовувати RPN (Region Proposal Network), як спосіб 
+генерації областей-кандидатів та Fast R-CNN для виявлення об'єктів в цих областях.
+Ці два етапи поєднуються в одну мережу за допомогою поширення ознак (feature sharing).
+
+
+\textbf{RPN} \ref{} приймає на вхід картинку, і повертає множину координат прямокутних областей як подальших
+кандидатів для класифікації з їхніми мірами присутності об'єкту. RPN - повнозв'язна 
+згорткова мережа, що значить в ній немає лінійних шарів. Саме вона стала заміною
+вибіркового алгоритму у Fast R-CNN. 
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\textwidth]{images/cnn_faster_rcnn_rpn}
+    \caption{Архітектура мережі RPN \cite{faster_rcnn}
+        \label{fig:cnn:faster_rcnn_rpn}
+    }
+\end{figure}
+
+У RPN ми застосовуємо принцип ковзкого вікна (sliding window) на згортковій мапі ознак,
+отриманої після останнього згорткового шару. Кожне таке вікно відображається 
+на вектор меншої розмірності. Для кожного вікна генеруються прямокутні області-кандидати, 
+що називаються якірними регіонами (anchor boxes) з параметрами масштабу та співвідношення сторін.
+Далі цей вектор подається на вхід двом повнозв'язним
+шарам: локалізації об'єктів(box-regression layer) та класифікації(box-classification layer).
+Використання якірних регіонів дозволяє детектувати об'єкти практично будь-якого масштабу та 
+пов'язувати ознаки RPN з Fast R-CNN.
+
+Як вже було сказано, принцип поширення ознак дозволяє поєднати вихід RPN як вхід в Fast R-CNN.
+Головна його ідея у використанні одних і тих же згорток у двох мережах, що дозволяє тренувати 
+RPN разом  з Fast R-CNN,  а не окремо.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\textwidth]{images/cnn_faster_rcnn_architecture}
+    \caption{Архітектура мережі Faster R-CNN \cite{faster_rcnn_website}
+        \label{fig:cnn:faster_rcnn_architecture}
+    }
+\end{figure}
+
+
 \clearpage
