--- a/5_mask/5_conclusion.tex
+++ b/5_mask/5_conclusion.tex
@@ -1,1 +1,8 @@
 \chapterConclusion
+
+Було оглянуто згорткові мережі YOLO, MobileNet, SSD, R-CNN
+як спосіб детектування та локалізації людини в створенні
+слайдів. Описано архітектури, переваги та недоліки кожної 
+згорткової мережі. Дані алгоритми є досить швидкими, щоб 
+створювати інформаційну технологію побудови слайдів на 
+мобільних пристроях.
