re-structurize thesis

--- a/index.tex
+++ b/index.tex
@@ -56,9 +56,10 @@
 \clearpage
 
 \import{3_preface/}{main.tex}
-\import{4_overview/}{main.tex}
-\import{5_mask/}{main.tex}
-\import{6_panorama/}{main.tex}
-
+\import{4_analogs/}{main.tex}
+\import{5_problem/}{main.tex}
+\import{6_mask/}{main.tex}
+\import{7_panorama/}{main.tex}
+\import{8_results/}{main.tex}
 
 \end{document}
